Login / Registration / Credential Check services

--- a/app/src/main/res/layout/register_layout1.xml
+++ b/app/src/main/res/layout/register_layout1.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:onClick="showRegistrationLayout"
+        android:onClick="tapRegistrationButton"
         android:text="Student"
         app:layout_constraintBottom_toTopOf="@+id/buttonRegisterProfessor"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:onClick="showRegistrationLayout"
+        android:onClick="tapRegistrationButton"
         android:text="Administrator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/buttonRegisterProfessor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="showRegistrationLayout"
+        android:onClick="tapRegistrationButton"
         android:text="Professor"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
