--- a/app/src/main/res/layout/register_layout2.xml
+++ b/app/src/main/res/layout/register_layout2.xml
@@ -161,7 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
-                android:onClick="showRegistrationLayout"
+                android:onClick="tapRegistrationButton"
                 android:text="Continue" />
 
         </LinearLayout>
