--- a/app/src/main/res/layout/register_layout3.xml
+++ b/app/src/main/res/layout/register_layout3.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".authentification.AuthentificationActivity">
+    tools:context=".authentication.AuthenticationActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -93,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:onClick="showRegistrationLayout"
+        android:onClick="tapRegistrationButton"
         android:text="Sign Up"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
