--- a/app/src/main/res/layout/register_layout2.xml
+++ b/app/src/main/res/layout/register_layout2.xml
@@ -40,119 +40,119 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Please enter your credentials:"
+                android:text="@string/enter_credentials"
                 android:textSize="18sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="Student Id" />
+                android:text="@string/student_id" />
 
             <EditText
                 android:id="@+id/registerNumarMatricolEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Student Id"
+                android:hint="@string/student_id"
                 android:inputType="text" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="First Name" />
+                android:text="@string/first_name" />
 
             <EditText
                 android:id="@+id/registerFirstNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="First Name"
+                android:hint="@string/first_name"
                 android:inputType="textPersonName" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="Last Name" />
+                android:text="@string/last_name" />
 
             <EditText
                 android:id="@+id/registerLastNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Last Name"
+                android:hint="@string/last_name"
                 android:inputType="textPersonName" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="Father's initial" />
+                android:text="@string/father_initial" />
 
             <EditText
                 android:id="@+id/registerFatherEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Father's Initial"
+                android:hint="@string/father_initial"
                 android:inputType="textPersonName" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="Email" />
+                android:text="@string/email2" />
 
             <EditText
                 android:id="@+id/registerEmailEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Email"
+                android:hint="@string/email2"
                 android:inputType="textEmailAddress" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="Phone Number" />
+                android:text="@string/phone_number" />
 
             <EditText
                 android:id="@+id/registerPhoneEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Phone Number"
+                android:hint="@string/phone_number"
                 android:inputType="phone" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="Year" />
+                android:text="@string/year" />
 
             <EditText
                 android:id="@+id/registerYearEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Year"
+                android:hint="@string/year"
                 android:inputType="number" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="Group" />
+                android:text="@string/group" />
 
             <EditText
                 android:id="@+id/registerGroupEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Year"
+                android:hint="@string/group"
                 android:inputType="text" />
 
             <Button
@@ -162,7 +162,7 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
                 android:onClick="tapRegistrationButton"
-                android:text="Continue" />
+                android:text="@string/continue_step" />
 
         </LinearLayout>
     </ScrollView>
@@ -172,7 +172,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Student Account"
+        android:text="@string/student_account"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
