--- a/app/src/main/res/layout/register_layout3.xml
+++ b/app/src/main/res/layout/register_layout3.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
-        android:text="Final Step"
+        android:text="@string/new_account"
         android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/registerEditTextEmail"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Account\nEmail: "
+        android:text="@string/email"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/registerEditTextEmail"
         app:layout_constraintRight_toLeftOf="@+id/registerEditTextEmail"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Repeat\npassword:"
+        android:text="@string/repeat_password"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/registerEditTextPassword2"
         app:layout_constraintRight_toLeftOf="@+id/registerEditTextPassword2"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Password: "
+        android:text="@string/password"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/registerEditTextPassword"
         app:layout_constraintRight_toLeftOf="@+id/registerEditTextPassword"
@@ -58,6 +58,7 @@
         android:layout_marginBottom="16dp"
         android:ems="10"
         android:inputType="textEmailAddress"
+        android:hint="@string/email_hint"
         app:layout_constraintBottom_toTopOf="@+id/registerEditTextPassword"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -70,6 +71,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:hint="@string/password_hint"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -83,6 +85,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:hint="@string/repeat_password_hint"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -94,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:onClick="tapRegistrationButton"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerEditTextPassword2" />
@@ -105,7 +108,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:onClick="showLoginLayout"
-        android:text="Back to login"
+        android:text="@string/back_to_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
