Better architecture, service-activity communication, student activity

--- a/app/src/main/res/layout/debug_layout.xml
+++ b/app/src/main/res/layout/debug_layout.xml
@@ -29,6 +29,17 @@
         app:layout_constraintTop_toBottomOf="@+id/populateStudents" />
 
     <Button
+        android:id="@+id/populateCourses"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:onClick="debugButton"
+        android:text="Populate Courses"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deleteUsers" />
+
+    <Button
         android:id="@+id/populateStudents"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
