--- a/app/src/main/res/layouts/activities/layout/login_layout.xml
+++ b/app/src/main/res/layouts/activities/layout/login_layout.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.authentication.AuthenticationActivity">
+    tools:context=".activities.implementations.authentication.AuthenticationActivity">
 
     <TextView
         android:layout_width="wrap_content"
