--- a/app/src/main/res/layouts/activities/layout/student_activity_content_layout.xml
+++ b/app/src/main/res/layouts/activities/layout/student_activity_content_layout.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.student.StudentActivity"
+    tools:context=".activities.implementations.student.StudentActivity"
     tools:showIn="@layout/app_bar_main">
 
     <Button
