--- a/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_content_layout.xml
+++ b/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_content_layout.xml
@@ -9,26 +9,53 @@
     tools:context=".activities.implementations.student.StudentActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <Button
-        android:id="@+id/buttonLoadCourses"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:onClick="loadCourses"
-        android:text="Load Courses"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <include
+        layout="@layout/student_activity_home_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/layoutHome"
+        android:visibility="visible"/>
 
-    <ListView
-        android:id="@+id/listCourses"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLoadCourses"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include
+        layout="@layout/student_activity_schedule_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/layoutSchedule"
+        android:visibility="invisible"/>
+
+    <include
+        layout="@layout/student_activity_grades_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/layoutGrades"
+        android:visibility="invisible"/>
+
+    <include
+        layout="@layout/student_activity_messages_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/layoutMessages"
+        android:visibility="invisible"/>
+
+    <include
+        layout="@layout/student_activity_professors_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/layoutProfessors"
+        android:visibility="invisible"/>
+
+    <include
+        layout="@layout/student_activity_courses_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/layoutCourses"
+        android:visibility="invisible"/>
+
+    <include
+        layout="@layout/student_activity_administrative_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/layoutAdministrative"
+        android:visibility="invisible"/>
 
 </android.support.constraint.ConstraintLayout>
