--- a/app/src/main/res/layouts/others/layout/app_bar_main.xml
+++ b/app/src/main/res/layouts/others/layout/app_bar_main.xml
@@ -21,7 +21,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <include
-        android:id="@+id/layout1"
+        android:id="@+id/layoutMain"
         layout="@layout/student_activity_content_layout" />
 
     <android.support.design.widget.FloatingActionButton
