Diagrams v1, better service communication, professors UI

--- a/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_courses_layout.xml
+++ b/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_courses_layout.xml
@@ -12,7 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/titleCoursesLayout"/>
 
-    <com.lonn.studentassistant.activities.implementations.student.customViews.CoursesScrollViewLayout
+    <com.lonn.studentassistant.views.implementations.CoursesScrollViewLayout
         android:id="@+id/layoutCoursesCategories"
         android:layout_width="match_parent"
         android:layout_height="0dp"
