--- a/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_professors_layout.xml
+++ b/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_professors_layout.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:layout_width="match_parent"
@@ -12,15 +13,12 @@
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/titleProfessorsLayout"/>
 
-    <ListView
-        android:id="@+id/listProfessors"
-        android:layout_width="0dp"
+    <com.lonn.studentassistant.views.implementations.ProfessorsScrollViewLayout
+        android:id="@+id/layoutProfessorsCategories"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleProfessorsLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/titleProfessorsLayout"
+        tools:context = ".activities.implementations.student.StudentActivity"/>
 
 </android.support.constraint.ConstraintLayout>
