--- a/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_content_layout.xml
+++ b/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_content_layout.xml
@@ -7,7 +7,9 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.implementations.student.StudentActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:showIn="@layout/app_bar_main"
+    android:background="@drawable/solid_background"
+    style="@style/DarkBlueShadow_LightBlue">
 
     <include
         layout="@layout/student_activity_home_layout"
