--- a/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_professors_layout.xml
+++ b/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_professors_layout.xml
@@ -6,17 +6,20 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
+        android:id="@+id/titleProfessorsLayout"
+        style="@style/DarkBlueTitle"
+        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Professors"
         android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/titleProfessorsLayout"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <com.lonn.studentassistant.views.implementations.ProfessorsScrollViewLayout
         android:id="@+id/layoutProfessorsCategories"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleProfessorsLayout"
         tools:context = ".activities.implementations.student.StudentActivity"/>
