--- a/app/src/main/res/values/authentication.xml
+++ b/app/src/main/res/values/authentication.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_title">Welcome to Student Assistant!</string>
+    <string name="app_title">Welcome to\nStudent Assistant!</string>
 
     <string name="login">Login</string>
     <string name="sign_up">Sign up</string>
