--- a/app/src/main/res/layouts/activities/professorEntityActivity/layout/professor_entity_activity_layout.xml
+++ b/app/src/main/res/layouts/activities/professorEntityActivity/layout/professor_entity_activity_layout.xml
@@ -6,112 +6,110 @@
             type="com.lonn.studentassistant.viewModels.ProfessorViewModel"/>
     </data>
 
-    <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/solid_background"
-        android:layout_marginBottom="16dp"
         android:padding="8dp">
 
         <ImageView
             android:id="@+id/professorImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginTop="24dp"
             android:contentDescription="Professor Image"
             android:scaleType="fitCenter"
-            android:layout_marginTop="24dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@{professor.professorImage}" />
 
         <TextView
-            style="@style/DarkBlueTitle"
             android:id="@+id/professorName"
+            style="@style/DarkBlueTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:gravity="center"
+            android:text="@{professor.fullName}"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/professorImage"
-            android:text="@{professor.fullName}"
-            android:gravity="center"
-            android:textSize="24sp"
-            android:textStyle="bold"/>
+            app:layout_constraintTop_toBottomOf="@id/professorImage" />
 
         <TextView
-            style="@style/DarkBlueTextView"
             android:id="@+id/professorEmail"
+            style="@style/DarkBlueTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/professorName"
             android:text="@{`Email: ` + professor.email}"
             android:textSize="18sp"
-            android:visibility="@{professor.emailVisible}"/>
-
-        <TextView
-            style="@style/DarkBlueTextView"
-            android:id="@+id/professorPhoneNumber"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:visibility="@{professor.emailVisible}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/professorEmail"
+            app:layout_constraintTop_toBottomOf="@id/professorName" />
+
+        <TextView
+            android:id="@+id/professorPhoneNumber"
+            style="@style/DarkBlueTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:text="@{`Phone number: ` + professor.phoneNumber}"
             android:textSize="18sp"
-            android:visibility="@{professor.phoneNumberVisible}"/>
-
-        <TextView
-            style="@style/DarkBlueTextView"
-            android:id="@+id/professorWebsite"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:visibility="@{professor.phoneNumberVisible}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/professorPhoneNumber"
+            app:layout_constraintTop_toBottomOf="@id/professorEmail" />
+
+        <TextView
+            android:id="@+id/professorWebsite"
+            style="@style/DarkBlueTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:text="@{`Website: ` + professor.website}"
             android:textSize="18sp"
-            android:visibility="@{professor.websiteVisible}"/>
-
-        <TextView
-            style="@style/DarkBlueTextView"
-            android:id="@+id/professorCabinet"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:visibility="@{professor.websiteVisible}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/professorWebsite"
+            app:layout_constraintTop_toBottomOf="@id/professorPhoneNumber" />
+
+        <TextView
+            android:id="@+id/professorCabinet"
+            style="@style/DarkBlueTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:text="@{`Cabinet: ` + professor.cabinet}"
             android:textSize="18sp"
-            android:visibility="@{professor.cabinetVisible}"/>
-
-        <TextView
-            style="@style/DarkBlueTextView"
-            android:id="@+id/professorCoursesTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:visibility="@{professor.cabinetVisible}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/professorCabinet"
+            app:layout_constraintTop_toBottomOf="@id/professorWebsite" />
+
+        <TextView
+            android:id="@+id/professorCoursesTitle"
+            style="@style/DarkBlueSubtitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:text="Courses: "
-            android:textSize="22sp"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/professorCabinet" />
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/professorCoursesTitle"
             app:layout_constraintTop_toBottomOf="@id/professorCoursesTitle">
+
             <LinearLayout
                 android:id="@+id/layoutProfessorCourses"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:orientation="vertical" />
         </ScrollView>
 
     </android.support.constraint.ConstraintLayout>
