--- a/app/src/main/res/layouts/adapters/layout/category_layout.xml
+++ b/app/src/main/res/layouts/adapters/layout/category_layout.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/checkBoxCategory" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/dark_stroke_solid_background"
+    android:layout_marginBottom="16dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginRight="8dp">
 
     <LinearLayout
         android:id="@+id/layoutCategoryContent"
@@ -16,8 +16,40 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="8dp"
         android:visibility="gone"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/checkBoxCategory" />
+        android:layout_below="@+id/layoutCategoryHeader" />
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/layoutCategoryHeader"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="@drawable/dark_color_bar"
+        android:weightSum="1"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp">
+
+        <TextView
+            android:id="@+id/titleCategory"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_weight="0.9"
+            android:textColor="#FFF"
+            android:textStyle="bold"
+            android:gravity="start|center_vertical"
+            android:textSize="18sp"/>
+
+        <ImageView
+            android:id="@+id/arrowCategory"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:contentDescription="Arrow"
+            android:layout_weight="0.1"
+            app:srcCompat="@drawable/ic_arrow_down"/>
+    </LinearLayout>
+</RelativeLayout>
