--- a/app/src/main/res/layouts/adapters/layout/scrollview_layout.xml
+++ b/app/src/main/res/layouts/adapters/layout/scrollview_layout.xml
@@ -3,9 +3,7 @@
     <ScrollView
         android:id="@+id/mainScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fadingEdgeLength="150dp"
-        android:requiresFadingEdge="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
