--- a/app/src/main/res/layouts/activities/courseEntityActivity/layout/course_entity_activity_layout.xml
+++ b/app/src/main/res/layouts/activities/courseEntityActivity/layout/course_entity_activity_layout.xml
@@ -69,31 +69,14 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/courseDescription" />
 
-        <TextView
-            android:id="@+id/courseProfessorsTitle"
-            style="@style/DarkBlueSubtitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="Professors: "
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/courseWebSite" />
-
-        <ScrollView
+        <com.lonn.studentassistant.views.implementations.scrollViewLayouts.ProfessorPartialScrollView
+            android:id="@+id/scrollViewCourseEntities"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/courseProfessorsTitle"
-            app:layout_constraintTop_toBottomOf="@id/courseProfessorsTitle">
-
-            <LinearLayout
-                android:id="@+id/layoutCourseProfessors"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
+            app:layout_constraintLeft_toLeftOf="@id/courseWebSite"
+            app:layout_constraintTop_toBottomOf="@id/courseWebSite"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
