--- a/app/src/main/res/layouts/activities/professorEntityActivity/layout/professor_entity_activity_layout.xml
+++ b/app/src/main/res/layouts/activities/professorEntityActivity/layout/professor_entity_activity_layout.xml
@@ -86,30 +86,29 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/professorWebsite" />
 
-        <TextView
-            android:id="@+id/professorCoursesTitle"
-            style="@style/DarkBlueSubtitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="Courses: "
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/professorCabinet" />
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/professorCoursesTitle"
-            app:layout_constraintTop_toBottomOf="@id/professorCoursesTitle">
+            app:layout_constraintLeft_toLeftOf="@id/professorCabinet"
+            app:layout_constraintTop_toBottomOf="@id/professorCabinet">
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:id="@+id/layoutProfessorCourses"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                    <com.lonn.studentassistant.views.implementations.scrollViewLayouts.CoursesPartialScrollView
+                        android:id="@+id/scrollViewProfessorEntities"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                    <com.lonn.studentassistant.views.implementations.scrollViewLayouts.OtherActivityPartialScrollView
+                        android:id="@+id/scrollViewActivityEntities"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
         </ScrollView>
 
     </android.support.constraint.ConstraintLayout>
