--- a/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_courses_layout.xml
+++ b/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_courses_layout.xml
@@ -14,7 +14,7 @@
         android:text="Courses"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <com.lonn.studentassistant.views.implementations.CoursesScrollViewLayout
+    <com.lonn.studentassistant.views.implementations.scrollViewLayouts.CoursesFullScrollView
         android:id="@+id/layoutCoursesCategories"
         android:layout_width="match_parent"
         android:layout_height="0dp"
