--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,6 +33,10 @@
                 android:icon="@drawable/ic_menu_courses"
                 android:title="Courses" />
             <item
+                android:id="@+id/nav_otherActivities"
+                android:icon="@drawable/ic_menu_other_activities"
+                android:title="Other Activities" />
+            <item
                 android:id="@+id/nav_administrative"
                 android:icon="@drawable/ic_menu_administrative"
                 android:title="Administrative" />
