--- a/app/src/main/res/layouts/fragments/layout/other_activity_view_full.xml
+++ b/app/src/main/res/layouts/fragments/layout/other_activity_view_full.xml
@@ -24,17 +24,6 @@
             android:textSize="18sp"/>
 
         <TextView
-            android:id="@+id/activityType"
-            style="@style/SmallDarkBlueTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/activityTitle"
-            android:text="@{otherActivity.type}"/>
-
-        <TextView
             android:id="@+id/activityYearAndSemester"
             style="@style/SmallDarkBlueTextView"
             android:layout_width="0dp"
@@ -42,8 +31,20 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/activityType"
+            app:layout_constraintTop_toBottomOf="@id/activityTitle"
             android:text="@{otherActivity.activityYearSemester}"/>
+
+        <TextView
+            android:id="@+id/activityDescription"
+            style="@style/SmallDarkBlueTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/activityYearAndSemester"
+            android:maxLines="2"
+            android:text="@{otherActivity.description}"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
